--- a/public/assets/css/base/reset.css
+++ b/public/assets/css/base/reset.css
@@ -6,6 +6,13 @@ html {
     overflow-x: clip;
     max-width: 100%;
     scroll-behavior: smooth;
+    box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+    box-sizing: inherit;
 }
 
 body.a2z-body {
